--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Hyunndy_Notepad</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_new_memo">NewMemoActivity</string>
+    <string name="title_activity_detail_memo_actvity">DetailMemoActvity</string>
 </resources>
